# AxTask

./: .dockerignore  .env.docker.example  .env.example  .env.production.example  .env.render.example  .gitattributes  .gitignore  .gitmodules  .replit  .tmp-commit-msg.txt  AGENTS.md  CHANGELOG.md  Dockerfile  PROJECT_GUIDE.md  README.md  VERSION.md  VERSION_1.3.0_PLAN.md  agent.md  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json  playwright.config.ts  render.yaml  replit.md  sedAbATpZ  setup-hooks.cmd  setup-hooks.sh  start-dev.bat  start-docker.cmd  start-docker.sh  start-offline.cmd  status-docker.cmd  status-docker.sh  stop-docker.cmd  stop-docker.sh  vite.config.ts  vitest.config.ts
.githooks/: post-merge  pre-commit  pre-push
tools/billing_bridge/: pyproject.toml  requirements.txt  setup-python.mjs
tools/billing_bridge/config/: allocation_rules.yaml  assignment_map.json  outward_assignment_map.csv  person_aliases.csv  site_map.csv
tools/billing_bridge/docs/: AXTASK_INTEGRATION_PLAN.md
tools/billing_bridge/src/billing_bridge/: __init__.py  allocate.py  build_month_pack.py  cli.py  export_manager.py  io_excel.py  models.py  normalize.py  reconcile.py  reporting.py
tools/billing_bridge/tests/: conftest.py  test_allocate.py  test_build_month_pack.py  test_end_to_end.py  test_export_manager.py  test_normalize.py  test_reconcile.py  test_reporting.py
tools/billing_bridge/tests/fixtures/: __init__.py
tools/billing_bridge/tests/fixtures/config/: __init__.py  factory.py
tools/billing_bridge/tests/fixtures/manager/: __init__.py  factory.py
(+946 files in other folders)
